[package]
name = "blockchain_visualizer"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0" }
bevy_mod_reqwest = "0.12.0"
serde = "1.0.193"
serde_json = "1.0.108"
# bevy-inspector-egui = "0.21.0"
bevy_panorbit_camera = "0.9"
# bevy_mod_picking = "0.17.0"
bevy_window = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"